imporove user experience

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,14 @@ body {
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 @keyframes fadeOut {
   from {
     opacity: 1;
